<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".DetalleSkill">

        <ImageView
            android:id="@+id/detalleSkillImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/llamada"
            android:contentDescription="@string/SkillDescripcion"
            android:adjustViewBounds="true"/>
        <TextView
            android:id="@+id/detalleTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_placeholder"
            android:textColor="?android:textColorSecondary"
            android:layout_below="@+id/detalleSkillImage"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            style="@style/TextAppearance.AppCompat.Headline"/>

        <TextView
            android:id="@+id/detalleNewsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news_placeholder"
            android:padding="16dp"
            android:layout_below="@+id/detalleTitle"
            android:textColor="?android:textColorSecondary"
            style="@style/TextAppearance.AppCompat.Subhead"/>
        <TextView
            android:id="@+id/detalleSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detalleSubtitulo"
            android:padding="16dp"
            android:layout_below="@+id/detalleNewsTitle"
            style="@style/TextAppearance.AppCompat.Subhead"/>


    </RelativeLayout>

</ScrollView>


